# Grasp_Planning

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker_env.sh  pyproject.toml  run_pipeline.sh
.codex/: hooks.json
.githooks/: post-checkout
configs/: grasp_generation_benchmark.yaml  grasp_pipeline_local.yaml  grasp_pipeline_pitl.yaml  grasp_pipeline_pitl_isaac.yaml  grasp_pipeline_real.yaml  grasp_pipeline_sim.yaml  grasp_pipeline_sim_isaac.yaml  grasp_pipeline_sim_plumbers_regrasp.yaml  mesh_antipodal_grasp_debug.yaml  mujoco_fr3_menagerie_arm.json  mujoco_fr3_robot_config.example.json  mujoco_fr3_v2_menagerie_arm.json  mujoco_fr3_v2_with_hand.json  mujoco_fr3_with_hand.json  mujoco_simulation.yaml
grasp_planning/: __init__.py  robot_naming.py  scene_defaults.py  start_poses.py
ros2_ws/: README.md  dependencies.repos
ros2_ws/src/robot_integration_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_integration_ros/resource/: robot_integration_ros
ros2_ws/src/robot_integration_ros/robot_integration_ros/: __init__.py  move_real_robot_ee.py  moveit_pose_commander.py
scripts/: build_mujoco_fr3_hand_models.py  check_fabrica_ground_feasible_grasps.py  compare_benchmark_results.py  compare_franka_asset_realization.py  convert_stl_to_usd.py  copy_worktree_local_state.sh  debug_cube_grasps.py  debug_mesh_antipodal_grasps.py  diagnose_fr3_top_grasp.py  download_required_assets.sh  download_ros2_dependencies.sh  evaluate_fabrica_grasp_bundle_in_mujoco.py  generate_fabrica_assembly_grasps.py  inspect_fr3_tcp_geometry.py  (+14 more)
(+119 files in other folders)
