[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grasp-planning"
version = "0.1.0"
description = "Task-aware grasp planning experiments for Franka Research 3 in Isaac Lab."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "PyYAML>=6.0",
    "scipy>=1.11",
    "tomli>=2.0; python_version < '3.11'",
    "torch>=2.2",
    "trimesh>=4.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "ruff>=0.11",
]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["grasp_planning*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501"]
