<?xml version="1.0"?>
<package format="3">
  <name>robot_integration_ros</name>
  <version>0.1.0</version>
  <description>ROS2 real-robot integration helpers for the Fabrica grasp-planning repository.</description>
  <maintainer email="noreply@example.com">Repository Maintainer</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
